--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,6 @@
 <body>
     <!-- <script src="index.js" > </script>
     <script src="../dist/main.js" > </script>  -->
+    <img src="assets/img/webpack-logo.png" alt="webpack logo"> 
 </body>
 </html>
